src/test/success/name_hiding.egern
func f(): void {
  func g(): void {
    func h(): void {
      a = 0
      print(a)
    }

    var a = 2
    print(a)
    h()
    print(a)
  }
  g()
  print(a)
}

var a = 1
print(a)
f()
print(a)
