src/test/fail/return_shallower_array_type_fail.egern
func getFirst(arg: [[int]]): [[int]] {
    return arg[0]
}

print(getFirst([[1, 2, 3]]))
